Some style changes

--- a/html/index.html
+++ b/html/index.html
@@ -23,9 +23,13 @@
             a:visited {color: #F01A30;}
             a {color: #F01A30;}
             article {text-align: center;}
+            body {
+                background-color: #223154;
+                color: #E6E6E6;
+            }
         </style>
     </head>
-    <body style="background-color: #223154; color: #E6E6E6;">
+    <body>
         <article>
             <a href="https://d.tube">Homepage</a>
             <h3>Singup form</h3>
