--- a/html/passport.html
+++ b/html/passport.html
@@ -4,8 +4,11 @@
   <title>D.Tube Signup</title>
   <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
   <style>
-    a, a.visited {
-      color:aqua
+    a, a:visited {color: #F01A30;}
+    article {text-align: center;}
+    body, p#userWallet {
+      background-color: #223154;
+      color: #E6E6E6;
     }
   </style>
   <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
