--- a/html/passport.html
+++ b/html/passport.html
@@ -42,12 +42,13 @@
       if (passportData.score) {
         const roundedScore = Math.round(passportData.score * 100) / 100
         setScore(roundedScore.toString());
-        if (typeof passportData.nextUrl !== 'undefined') {
-          signupAnchor.href = passportData.nextUrl+"/index.html";
-          signupAnchor.removeAttribute("hidden");
+        if (typeof passportData.address !== 'undefined' && typeof passportData.token !== 'undefined') {
+          inputAddress.setAttribute("value", passportData.address)
+          inputToken.setAttribute("value", passportData.token)
+          signupForm.removeAttribute("hidden");
           notEnoughScore.setAttribute("hidden", true)
         } else {
-          signupAnchor.setAttribute("hidden", true)
+          signupForm.setAttribute("hidden", true)
           notEnoughScore.removeAttribute("hidden")
         }
       } else {
@@ -91,17 +92,23 @@
     <button hidden=true id='checkButton' onclick="" class="mx-auto rounded-md p-2 bg-purple-500 text-white">
       Check eligibility
     </button><br />
-    <a href="" hidden=true id="signupAnchor">Proceed to signup!</a>
+    <form id="signupForm" method="POST" hidden="true" action="signupPage">
+      <input type="submit" id="signupButton" class="mx-auto rounded-md p-2 bg-purple-500 text-white" value="Proceed to signup">
+      <input type="text" name="token" hidden="true" id="token" value="">
+      <input type="text" name="address" hidden="true" id="address" value="">
+    </form>
     <p id='notEnoughScore' hidden="true">We're sorry, but you need a passport score of at least 15 to signup. Verify something more and retry.</a>
     <p id='userWallet' class='text-lg text-gray-600 my-2'></p>
   </div>
 
   <script>
     window.userWalletAddress = null
+    const inputAddress = document.getElementById('address')
+    const inputToken = document.getElementById('token')
     const loginButton = document.getElementById('loginButton')
     const checkButton = document.getElementById('checkButton')
     const userWallet = document.getElementById('userWallet')
-    const signupAnchor = document.getElementById('signupAnchor')
+    const signupForm = document.getElementById('signupForm')
     const notEnoughScore = document.getElementById('notEnoughScore')
     const metamaskLink = document.getElementById('metamaskLink')
 
