--- a/html/passport.html
+++ b/html/passport.html
@@ -94,6 +94,7 @@
 
 <body class="flex w-screen h-screen justify-center items-center">
   <div class="flex-col space-y-2 justify-center items-center">
+    New beta signup page, let us know on <a href="https://discord.gg/dtube">Discord</a> if you face any problem.<br />
     <a href="https://d.tube">Homepage</a><br />
     By signing up, you agree to our <a href="legal/terms_of_use.html" target="_blank">Terms of Service</a> and our <a href="legal/privacy_policy.html" target="_blank">Privacy Policy</a>:<br />
     <a target="_blank" href="https://passport.gitcoin.co/">Get your web3 passport!</a><br /><br />
