--- a/html/passport.html
+++ b/html/passport.html
@@ -5,10 +5,20 @@
   <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
   <style>
     a, a:visited {color: #F01A30;}
-    article {text-align: center;}
     body, p#userWallet {
       background-color: #223154;
       color: #E6E6E6;
+      text-align: center;
+      align-items: center
+    }
+    img {
+      display: block;
+      margin-left: auto;
+      margin-right: auto;
+      width: 35%; 
+      height: 35%; 
+      object-fit: cover;
+      object-position: 25% 25%; 
     }
   </style>
   <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
@@ -94,6 +104,7 @@
 
 <body class="flex w-screen h-screen justify-center items-center">
   <div class="flex-col space-y-2 justify-center items-center">
+    <img src="https://github.com/dtube/about/blob/master/img/kit/Logo_White.png?raw=true"><br />
     New beta signup page, let us know on <a href="https://discord.gg/dtube">Discord</a> if you face any problem.<br />
     <a href="https://d.tube">Homepage</a><br />
     By signing up, you agree to our <a href="legal/terms_of_use.html" target="_blank">Terms of Service</a> and our <a href="legal/privacy_policy.html" target="_blank">Privacy Policy</a>:<br />
