--- a/html/passport.html
+++ b/html/passport.html
@@ -15,10 +15,6 @@
       display: block;
       margin-left: auto;
       margin-right: auto;
-      width: 35%; 
-      height: 35%; 
-      object-fit: cover;
-      object-position: 25% 25%; 
     }
   </style>
   <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
@@ -104,7 +100,7 @@
 
 <body class="flex w-screen h-screen justify-center items-center">
   <div class="flex-col space-y-2 justify-center items-center">
-    <img src="https://github.com/dtube/about/blob/master/img/kit/Logo_White.png?raw=true"><br />
+    <img src="https://github.com/dtube/about/blob/master/img/kit/Logo_White.png?raw=true" width="500em"><br />
     New beta signup page, let us know on <a href="https://discord.gg/dtube">Discord</a> if you face any problem.<br />
     <a href="https://d.tube">Homepage</a><br />
     By signing up, you agree to our <a href="legal/terms_of_use.html" target="_blank">Terms of Service</a> and our <a href="legal/privacy_policy.html" target="_blank">Privacy Policy</a>:<br />
